fixes header and sun on mobile view

--- a/src/components/WelcomeBlock/WelcomeBlock.css
+++ b/src/components/WelcomeBlock/WelcomeBlock.css
@@ -1,7 +1,7 @@
 .linkhome h1 {
   text-shadow: 0px 0px 60px var(--secondary);
   /* font-weight: 900; */
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   padding-left: 1.3rem;
   /* margin-top: 50px; */
 }
@@ -56,7 +56,7 @@
   /* display: block; */
   font-weight: 500;
   /* font-size: 125px; */
-  font-size: 4rem;
+  /* font-size: 4rem; */
   color: var(--primary);
   letter-spacing: 2vw;
   text-align: center;
