--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,7 +107,6 @@ body {
 
 .more {
   font-style: italic;
-  margin-top: 3rem;
   color: var(--primary);
   text-decoration: dotted;
   transition: all 0.5s ease-in-out;
